--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,6 @@
         </div>
       </div>
 
-
       <div class="popup popup_type_image">
         <div class="popup__content popup__content_content_image">
           <button type="button" class="popup__close"></button>
@@ -122,7 +121,38 @@
         </div>
       </div>
     </div>
-    
+    <div class="popup popup_type_delete">
+      <div class="popup__content popup_height">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Вы уверены?</h3>
+        <form class="popup__form" name="delete-card" novalidate>
+          <button type="submit" class="button popup__button">
+            Да
+          </button>
+        </form>
+      </div>
+    </div>
+    <div class="popup popup_type_avatar">
+      <div class="popup__content popup_height">
+        <button type="button" class="popup__close"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="upd-avatar" novalidate>
+          <input
+            type="url"
+            name="link"
+            id="link-input"
+            class="popup__input popup__input_type_url"
+            placeholder="Ссылка на картинку"
+            required
+          />            
+          <span class="link-input-error popup__input-error"></span>
+          <button type="submit" class="button popup__button">
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
+  </div> 
 
     <template id="card-template">
       <li class="places__item card">
@@ -130,7 +160,10 @@
         <button type="button" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
+          <div class="card__like-area">
           <button type="button" class="card__like-button"></button>
+          <span class="card__like-count">0</span>
+          </div>
         </div>
       </li>
     </template>
